fixing alignments

--- a/code/style.css
+++ b/code/style.css
@@ -189,6 +189,7 @@ button:hover {
   display: flex;
   justify-content: space-evenly;
 }
+
 .where-btn {
   position: relative;
   border-radius: 50%;
@@ -203,34 +204,37 @@ button:hover {
 }
 
 select {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none; 
-    width: 100%;
-    height: 40px;
-    border-radius: 10px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 18px;
-    outline: none;
-    text-align-last: center;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    color: rgb(241, 234, 234);
-    font-weight: 600;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  outline: none;
+  text-align-last: center;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color: rgb(241, 234, 234);
+  font-weight: 600;
 }
 
 .select-mountain {
   background-image: url("./assets/mountain.jpg");
   width: 100%;
+  background-position: center;
 }
 
 .select-beach {
   background-image: url("./assets/beach.jpg");
   width: 100%;
+  background-position: center;
 }
 
 .select-city {
   background-image: url("./assets/city.jpg");
   width: 100%;
+  background-position: center;
 }
 
 option {
@@ -244,10 +248,11 @@ option {
 }
 
 .where-btn {
-  width:60px;
-  height:60px;
+  width: 60px;
+  height: 60px;
   position: relative;
-  border-radius:50%;
+  border-radius: 50%;
+  margin: 10px;
   display: flex;
   box-shadow: 1px 1px 4px 3px rgba(34, 33, 33, 0.678);
 }
@@ -258,12 +263,16 @@ option {
   object-fit: contain;
 }
 
+.interest-wrapper {
+  justify-content: space-between;
+  display: flex;
+  width: 100%;
+}
 /* Customize the label (the container) */
-.container {
+.interest-container {
   display: flex;
   align-items: center;
   position: relative;
-  justify-content: space-between;
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
@@ -272,12 +281,11 @@ option {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  width: 100%;
   font-size: 16px;
 }
 
 /* Hide the browser's default checkbox */
-.container input {
+.interest-container input {
   position: absolute;
   opacity: 0;
   cursor: pointer;
@@ -288,19 +296,19 @@ option {
 /* Create a custom checkbox */
 .checkmark {
   position: absolute;
-  left:0;
+  left: 0;
   height: 25px;
   width: 25px;
   background-color: #eee;
 }
 
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
+.interest-container:hover input~.checkmark {
   background-color: rgb(204, 204, 204);
 }
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
+.interest-container input:checked~.checkmark {
   background-color: rgb(255, 132, 50);
 }
 
@@ -312,12 +320,12 @@ option {
 }
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
+.interest-container input:checked~.checkmark:after {
   display: block;
 }
 
 /* Style the checkmark/indicator */
-.container .checkmark:after {
+.interest-container .checkmark:after {
   left: 9px;
   top: 5px;
   width: 5px;
@@ -326,4 +334,9 @@ option {
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
-  transform: rotate(45deg);}
+  transform: rotate(45deg);
+}
+
+.interest-btn {
+  margin-left: 5px;
+}
